--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ paginate: 6
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : 你了解的manga站~
+title : H却不工口manga站~
 tagline: Site Tagline
 author :
   name : Kasim
